--- a/lms-frontend/src/pages/AdminDashboard/Courses.css
+++ b/lms-frontend/src/pages/AdminDashboard/Courses.css
@@ -70,10 +70,10 @@
 .courses-table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #e0e0e0; /* outer border */
+  border: 1px solid #e0e0e0; 
 }
 .courses-table thead {
-  background: #DFC5FE;
+  background: #672072;
   color: #fff;
 }
 .courses-table th {
@@ -81,11 +81,9 @@
   text-align: left;
   user-select: none;
   cursor: pointer;
-  border: 1px solid #a39b9b; /* cell border */
+  border: 1px solid #a39b9b; 
 }
-.courses-table th.actions-col {
-  text-align: center;
-}
+
 
 /* BODY ROWS & hover */
 .courses-table tbody tr {
@@ -102,10 +100,7 @@
   border: 1px solid #a39b9b; /* cell border */
   color: #333;
 }
-.courses-table td.actions-col {
-  text-align: center;
-  vertical-align: middle;
-}
+
 
 /* Inline edits */
 .inline-edit {
